<resources>
    <string name="app_version">version 0.3.38</string>
    <string name="app_name">SonoRIs MT</string>
    <string name="do_not_mistake">間違いありませんか?</string>
    <string name="failed_to_get">教員名の取得に失敗しました.</string>
    <string name="regain">再取得</string>
    <string name="select_name">選択名</string>
    <string name="confirm_select_content">選択内容に間違いありませんか.</string>
    <string name="message_no_attendee">受講者を取得できませんでした.</string>
    <string name="faile_process">処理に失敗しました.</string>
    <string name="infomation_sitter">着席情報</string>
    <string name="number_of_people">人</string>
    <string name="percentage">%</string>
    <string name="seat_number_separetar"> - </string>
    <string name="other">他</string>
    <string name="close">とじる</string>
    <string name="space"></string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="be">する</string>
    <string name="donot">しない</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="positive">はい</string>
    <string name="negative">いいえ</string>
    <string name="loading">読み込み中...</string>
    <string name="chapter_attendance">ハンズフリー出席管理</string>
    <string name="title_section0">SonoRIs MT</string>
    <string name="title_section1">着席状況</string>
    <string name="title_section2">受講者一覧</string>
    <string name="title_section3">再調査</string>
    <string name="title_section4">SonoRIs忘れ</string>
    <string name="title_section5">グルーピング</string>
    <string name="title_section12">グループ調整</string>
    <string name="title_section13">スマホ クリッカー</string>
    <string name="title_section6">SonoRIs クリッカー</string>
    <string name="title_section7">個人履歴</string>
    <string name="title_section8">講義内容</string>
    <string name="title_section9">メッセージ</string>
    <string name="title_section10">ヘルプ</string>
    <string name="title_section11">アプリケーション情報</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="colon">:</string>
    <string name="semicolon">;</string>
    <string name="comma">,</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="menu_hands_free_attendance_student_history">個人履歴</string>
    <string name="menu_hands_free_attendance_re_call_the_roll">在室確認</string>
    <string name="re_call_the_roll_alert_dialog_title">在室確認中...</string>
    <string name="re_call_the_roll_alert_dialog_message">在室確認中です.しばらくお待ちください.</string>
    <string name="re_call_the_roll_end_alert_dialog_title">在室確認終了</string>
    <string name="re_call_the_roll_end_alert_dialog_message">在室確認が終了しました.</string>
    <string name="menu_action_questionnaire_servey">スマホ クリッカー</string>
    <string name="menu_action_questionnaire_result">回答結果</string>
    <string name="action_attendance_list">出席者一覧</string>
    <string name="action_sit_situation">着座状況</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_japanese_alphabetical_order_fragment">JapaneseAlphabeticalOrderFragmentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_kana_index_select">KanaIndexSelectActivity</string>
    <string name="message_help">ESLの表示が変わらない時は、ESLの故障が考えられます.学生課へ新しいESLを受け取りに行かせて下さい.</string>
    <string name="title_activity_confirm_class_plan">ConfirmClassPlanActivity</string>
    <string name="shelf_labels">SonoRIs</string>
    <string name="fifty_index_table_page_title">50音表から選択して下さい.</string>
    <string name="kana_index_select_select_name">選択名 : </string>
    <string name="confirm_nearest_class_plan_title_messge">出席状況を確認しますか？</string>
    <string name="confirm_nearest_class_plan_now_brosing">名が出席状況をすでに閲覧中です.</string>
    <string name="confirm_for_class_plan_title_messge">次回の講義案内</string>
    <string name="confirm_not_today_class_but_next_class_message">本日の授業はありません.\r\n次回の授業案内</string>
    <string name="confirm_for_class_plan_class_date">授業日 : </string>
    <string name="confirm_for_class_plan_class_in_roomname">教室名 : </string>
    <string name="confirm_for_class_plan_class_subjectname">科目名 : </string>
    <string name="confirm_for_class_plan_re_select_prelude">担当の授業開始時間前です.\r\n</string>
    <string name="confirm_for_class_plan_re_select">に再度選択して下さい.</string>
    <string name="confirm_not_today_class_but_next_class_re_select">自動でアプリが終了しますので、しばらくお待ち下さい.</string>
    <string name="return_fifty_index_table_page">50音表へ</string>
    <string name="main_bottom_top_message">画面左側から右側に向かって\r\n指でスワイプして下さい.</string>
    <string name="before_attendance_status">着席情報配信中です...</string>
    <string name="group_number">　グループ </string>
    <string name="seatposition">　着席位置 </string>
    <string name="position_delimiter">　</string>
    <string name="forgot_title"> </string>
    <string name="forgot_apply">SonoRIs\n所持</string>
    <string name="forgot_release">SonoRIs\n不携帯</string>
    <string name="manual_attendance_title">　出席していることを</string>
    <string name="manual_attendance_apply">出席\r\n認定</string>
    <string name="manual_attendance_release">出席\r\n不認定</string>
    <string name="manual_be_in_wait_room_title">　在室確認を送信しています.</string>
    <string name="manual_be_in_room_title"></string>
    <string name="manual_be_in_room_apply">在室\r\n確認</string>
    <string name="manual_be_in_room_release">在室\r\n未確認</string>
    <string name="str_regarded_as_attendance">出席とみなした</string>
    <string name="str_regarded_as_late">遅刻とみなした</string>
    <string name="str_regarded_as_absent">欠席とみなした</string>
    <string name="str_regarded_as_forgot">SonoRIs忘れを確認した</string>
    <string name="str_regarded_as_reason_did_not_show_rb">SonoRIsに表示されなかった</string>
    <string name="str_regarded_as_reason_ack_no_response_rb">ACK応答がなかった</string>
    <string name="str_regarded_as_reason_forgot_rb">SonoRIs不携帯を確認した</string>
    <string name="str_regarded_as_reason_other1_rb">その他の理由による</string>
    <string name="str_regarded_as_reason_alert_unselected">理由を選択してください.</string>
    <string name="grouping_group_duaring_attendance">出席調査が終わるまでグルーピングを行うことはできません.</string>
    <string name="grouping_group_title">何に基づいてグループを編成しますか？</string>
    <string name="grouping_group_group_number">グループ数に基づいて</string>
    <string name="grouping_group_select_group_number">編成グループ総数を入力して下さい.</string>
    <string name="grouping_group_menber_number">メンバー数に基づいて</string>
    <string name="grouping_group_select_group_assist">グループ</string>
    <string name="grouping_group_select_menber_number">１つのグループ何人編成にするか入力して下さい.</string>
    <string name="grouping_group_select_menber_number_guidance">１グループ何人編成にするか選択して下さい.</string>
    <string name="grouping_group_select_menber_assist_front">１グループ</string>
    <string name="grouping_group_select_menber_assist">人</string>
    <string name="grouping_group_enter">を入力して下さい.</string>
    <string name="grouping_group_request_for_input">入力のお願い</string>
    <string name="grouping_group_please_enter_in_number">数字を入力して下さい.</string>
    <string name="grouping_group_confirm">確認</string>
    <string name="grouping_group_attendee_is_not_enough">出席者が足りません.</string>
    <string name="grouping_group_end_message">グルーピングを行いました.</string>
    <string name="grouping_group_end_group_cnfirm">着席状況を確認</string>
    <string name="question_duaring_attendance">出席認定が終わるまでアンケートを行うことはできません.</string>
    <string name="question_index_number">アンケート</string>
    <string name="questionnaire_topic">問</string>
    <string name="questionnaire_number">問</string>
    <string name="ask_number">Q</string>
    <string name="ask_dot">.</string>
    <string name="questionnaire_custom_dialog_start">の問題を送信しますか？</string>
    <string name="questionnaire_custom_dialog_check">に対する回答を収集しますか？</string>
    <string name="questionnaire_custom_dialog_result">の回答を学生に返信しますか？</string>
    <string name="questionnaire_custom_dialog_another">しばらくお待ちください.</string>
    <string name="questionnaire_custom_dialog_confirm_result">の結果円グラフを表示しますか？</string>
    <string name="questionnaire_custom_dialog_warning1">SonoRIs.の画面を表に向け、\r\nクリッカー参加学生全員が机の上に置いたのを確認してから、\r\n開始してください.</string>
    <string name="questionnaire_custom_dialog_warning2">回答が「いいえ」のひとが、SonoRIs.をカバンの奥深くにしまったのを確認してから、\n\n開始してください.</string>
    <string name="questionnaire_custom_dialog_receiving_directive">SonoRIsが赤外線信号を受信できるように指示してください.</string>
    <string name="questionnaire_custom_dialog_do_hide_directive">「いいえ」の学生はSonoRIsの受信部を隠すよう指示してください.</string>
    <string name="questionnaire_custom_dialog_browsable">回答閲覧可能</string>
    <string name="number_of_times">回</string>
    <string name="total_attendee">出席</string>
    <string name="total_absentee">欠席</string>
    <string name="total_late">遅刻</string>
    <string name="leave_early">早退</string>
    <string name="total_no_absentee">欠席なし</string>
    <string name="serch_history_dialog_fragment_title">参照したい学生を選んでください.</string>
    <string name="history_dialog_frament_class_room_count">回目</string>
    <string name="history_dialog_frament_attendee_state">〇</string>
    <string name="history_dialog_frament_absentee_state">×</string>
    <string name="history_dialog_frament_forgot_esl">ESL忘れ</string>
    <string name="alert_title_message_unimplemented">未実装</string>
    <string name="alert_message_unimplemented">まだ使用することが出来ません.</string>
    <string name="alert_title_message_nouse">使用できません.</string>
    <string name="alert_message_nouse">現在のバージョンではお使いになることができません.</string>
    <string name="alert_title_message_still_get_roster">しばらくお待ちください.</string>
    <string name="alert_message_still_get_roster">履修者の情報を取得中です.</string>
    <string name="alert_title_message">メッセージ</string>
    <string name="alert_message_donot_re_call_the_roll">まだ全員の出席が確認できていないので使用することが出来ません.</string>
    <string name="alert_message_cannot_accept_input_value">入力された値ではグルーピングを行うことができません.</string>
    <string name="title_activity_disconnect">DisconnectActivity</string>
    <string name="disconect_message">ネットワークが切断されました.ネットワーク接続を有効にして下さい.</string>
    <string name="title_activity_disconect">DisconectActivity</string>
    <string name="transmit_checker_dialog_tile"> </string>
    <string name="indicator_seat">指</string>
    <string name="indicator_attendance">出</string>
    <string name="indicator_re_attendance">在</string>
    <string name="indicator_privacy_protection">P</string>
    <string name="group_readjustment_attendance_undetermined_str">出席者が確定するまでお待ちください.</string>
    <string name="group_readjustment_attendance_determined_readjustment_no_need_str">グループ調整を行う必要はありません.</string>
    <string name="group_readjustment_attendance_determined_readjustment_need_str">最低人数未満のグループがあります.</string>
    <string name="group_readjustment_attendance_determined_readjustment_need_listview">人グループ : </string>
    <string name="group_readjustment_attendance_determined_readjustmented_str">グループを移動するよう指示をしてください.</string>
    <string name="group_readjustment_attendance_determined_readjustmented_toal_str">グループ調整が終了しました.</string>
    <string name="group_readjustment_attendance_determined_readjustmented_group_info_str">グループ情報</string>
    <string name="group_readjustment_attendance_determined_group_name_str">調整後グループ名 : </string>
    <string name="group_readjustment_attendance_determined_group_seat_name_str">調整後座席位置 : </string>
    <string name="group_readjustment_start_btn">グループ調整を開始する</string>
</resources>